--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       </li>
     </ul>
   </div>
-  
+
   <h2>THE FOUNDERS</h2>
   <p>
     Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee Donahoe,
@@ -110,6 +110,7 @@
     Other related tutorials can be found at
     <a href="https://learnenough.com/">learnenough.com</a>.
   </p>
+  {% include footer.html %}
 </body>
 
 </html>
