Finish the JavaScript gallery

--- a/css/main.css
+++ b/css/main.css
@@ -372,7 +372,7 @@ h2 ~ p {
   opacity: 1;
 }
 .gallery-thumbs .current img {
-  box-shadow: 0 0 0 5px #ed6e2f;
+  box-shadow: 0 0 0 5px #728BA6;
   opacity: 1;
 }
 .gallery-photo {
