--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,13 @@
 <head>
   {% if page.title %}
-    <title>{{ page.title }} | Test Page</title>
+  <title>{{ page.title }} | Test Page</title>
   {% else %}
-    <title>Test Page: Don't Panic</title>
+  <title>Test Page: Don't Panic</title>
   {% endif %}
   {% if page.description %}
-    <meta name="description" content="{{ page.description }}">
+  <meta name="description" content="{{ page.description }}">
   {% else %}
-    <meta name="description" content="This is a dangerous site.">
+  <meta name="description" content="This is a dangerous site.">
   {% endif %}
   <link href="/favicon.png" rel="icon">
   <!-- <link href="/apple-touch-icon.png" rel="apple-touch-icon"> -->
@@ -23,5 +23,18 @@
     document.addEventListener("DOMContentLoaded", function() {
       activateGallery();
     });
+  </script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KFZ3FC7270"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KFZ3FC7270');
   </script>
 </head>
